tests/errors/sem.type-mismatch.void-deref-op.or
main :: () -> void {
    ptr := (&void).{};
    *ptr;
};
